--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>SkyWeather - Modern Weather App</title>
   <meta name="description"
-    content="SkyWeather is a beautiful, modern weather application with real-time forecasts, interactive maps, and detailed weather analytics." />
+    content="SkyWeather is a beautiful, modern weather application with real-time forecasts and detailed weather analytics." />
   <meta name="keywords" content="weather, forecast, temperature, rain, UV index, air quality, weather app" />
   <meta name="author" content="mirasto" />
 
@@ -35,8 +35,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+
 
   <script>
     (function () {
